# nonebot_plugin_dialectlist

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-publish.yml
nonebot_plugin_dialectlist/: __init__.py  config.py  function.py  model.py  qqDBRecorder.py  qqGuildJsonRecorder.py  record4dialectlist.py  render.py  schema.py  storage.py  time.py  usage.py  utils.py
nonebot_plugin_dialectlist/migrations/: 506cbd6bf1ec_init_dialectlist.py  873ad3421460_.py  fb88e4d27eb8_update_dialectlist.py
nonebot_plugin_dialectlist/source/: rank.html
nonebot_plugin_dialectlist/template/: rank_template.j2
nonebot_plugin_dialectlist/template/css/: style.css
nonebot_plugin_dialectlist/temple/: rank_temple.html
nonebot_plugin_dialectlist/temple/css/: style.css
tests/: render.py  temple_render.py
