[project]
name = "nonebot_plugin_dialectlist"
version = "2.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Chen_Xu233", email = "woyerpa@outlook.com"},
]
dependencies = [
    "nonebot2>=2.3.1",
    "nonebot-plugin-chatrecorder>=0.6.0",
    "pygal>=3.0.4",
    "requests>=2.32.3",
    "nonebot-plugin-apscheduler>=0.4.0",
    "nonebot-plugin-alconna>=0.46.6",
    "nonebot-plugin-cesaa>=0.4.0",
    "nonebot-plugin-userinfo>=0.2.4",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "ruff>=0.4.9",
    "setuptools>=70.0.0",
    "twine>=5.1.0",
]

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 80
[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
