[project]
name = "nonebot-plugin-dialectlist"
version = "2.2.3"
description = "看看你群群友有多能说"
authors = [
    {name = "Chen_Xu233", email = "woyerpa@outlook.com"},
]
dependencies = [
    "nonebot-plugin-chatrecorder>=0.6.0",
    "requests>=2.32.3",
    "nonebot-plugin-orm[default]",
    "nonebot-plugin-apscheduler>=0.4.0",
    "nonebot-plugin-alconna>=0.50.2",
    "nonebot-plugin-cesaa>=0.4.0",
    "nonebot-plugin-userinfo>=0.2.4",
    "nonebot-plugin-htmlrender>=0.3.3",
    "nonebot2>=2.3.2",
    "cn2an>=0.5.22"
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
dev = [
    "ruff>=0.5.5",
    "setuptools>=71.1.0",
    "twine>=5.1.0",
    "nb-cli>=0.7.6"
]
Test = [
    "nonebot-adapter-onebot>=2.4.4",
]

[tool.pdm]
distribution = true

[tool.ruff]
line-length = 80
[tool.ruff.format]
quote-style = "single"
indent-style = "tab"

[tool.pdm.scripts]

build = 'pdm run setup.py sdist'
publish = 'pdm run python -m twine upload dist/*'


# 以下为智普 AI 生成，还不知道这玩意有啥用。
# [tool.pdm.dev-dependencies]
# black = "^23.1.0"
# isort = "^5.10.1"
# pre-commit = "^2.20.0"

# [tool.pdm.global-options]
# --no-pip-version-check = true
